[v#.#.#] ([MMM’YY])
  * Main sidebar improvements:
    - Labels added under icons
    - Nodes can be added in collapsed state
    - Removed animations and transitions while expanding and collapsing 
  * Upgraded gems: rails
  * Bugs fixed:
    - Editor drag and drop, and copy paste inserts attachments at the cursor
      position instead of at the end of the textarea.
    - Fixed redirect when canceling editing evidence from the issue level
    - Bug tracker items: #N, #M, #O, ...
  * New integrations:
    - Nipper
  * Integration enhancements:
    - [integration enhancement #1]
    - [integration enhancement ...]
  * Reporting enhancements:
    - [reporting enhancement #1]
    - [reporting enhancement ...]
  * REST/JSON API enhancements:
    - [API enhancement #1]
    - [API enhancement ...]
  * Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v3.19.0 (September 2020)
  * Auto upload attachments and screenshots without requiring the use of the staging area
  * Cards, Evidence, Issues, and Notes now have their own attachment support
  * Displays a notification badge in the browser tab when there are unread notifications
  * Editor: Allow drag & drop, copy & paste, and direct image uploading
  * Increase the node properties column size by changing it to LONGTEXT
  * Layout: Breadcrumbs have a fixed position
  * Link to our support site on the styles help page
  * Long dropdown menus are vertically scrollable
  * Bugs fixed:
    - Use absolute send times in notification emails instead of relative

v3.18.0 (July 2020)
  * Add all activity view
  * Render markup inside table columns
  * Update top navigation link styles and collapsed menu
  * Upgraded gems: rack, sanitize, sassc
  * Bugs fixed: