@@ -2,7 +2,8 @@
   * Main sidebar improvements:
     - Labels added under icons
     - Nodes can be added in collapsed state
-    - Removed animations and transitions while expanding and collapsing 
+    - Removed animations and transitions while expanding and collapsing
+  * Navbar dropdown menu's are no longer locked to the right side of the browser
   * Upgraded gems: rails
   * Bugs fixed:
     - Editor drag and drop, and copy paste inserts attachments at the cursor
